<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_main_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/id_sol4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:hint="392.000"
        android:adjustViewBounds="true"
        android:tag="g4"
        android:text="@string/Sol" />

    <Button
        android:id="@+id/id_la4"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_sol4"
        android:layout_alignParentRight="true"
        android:hint="440.000"
        android:tag="a4"
        android:text="@string/La" />

    <Button
        android:id="@+id/id_xi4"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_la4"
        android:layout_alignParentRight="true"
        android:hint="493.880"
        android:tag="b4"
        android:text="@string/Xi" />

    <Button
        android:id="@+id/id_do4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_xi4"
        android:layout_alignParentRight="true"
        android:hint="261.630"
        android:tag="c4"
        android:text="@string/Do" />

    <Button
        android:id="@+id/id_do5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/id_do4"
        android:layout_alignBottom="@+id/id_do4"
        android:layout_toLeftOf="@+id/id_do4"
        android:hint="523.250"
        android:tag="c5"
        android:text="@string/Do2" />

    <Button
        android:id="@+id/id_xi5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_do4"
        android:layout_toLeftOf="@+id/id_xi4"
        android:hint="987.770"
        android:tag="b5"
        android:text="@string/Xi2" />

    <Button
        android:id="@+id/id_la5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_xi4"
        android:layout_toLeftOf="@+id/id_la4"
        android:hint="880.000"
        android:tag="a5"
        android:text="@string/La2" />

    <Button
        android:id="@+id/id_sol5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_la4"
        android:layout_toLeftOf="@+id/id_sol4"
        android:hint="783.990"
        android:tag="g5"
        android:text="@string/Sol2" />

    <Button
        android:id="@+id/id_fa5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="698.460"
        android:tag="f5"
        android:text="@string/Fa2" />

    <Button
        android:id="@+id/id_mi5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/id_fa5"
        android:hint="659.260"
        android:tag="e5"
        android:text="@string/Mi2" />

    <Button
        android:id="@+id/id_re5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/id_mi5"
        android:hint="587.330"
        android:tag="d5"
        android:text="@string/Re2" />

    <Button
        android:id="@+id/id_re4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/id_re5"
        android:layout_alignBottom="@+id/id_re5"
        android:layout_toRightOf="@+id/id_re5"
        android:hint="293.660"
        android:tag="d4"
        android:text="@string/Re" />

    <Button
        android:id="@+id/id_fa4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_mi4"
        android:layout_alignParentTop="true"
        android:hint="349.230"
        android:tag="f4"
        android:text="@string/Fa" />

    <Button
        android:id="@+id/id_mi4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_re4"
        android:layout_below="@+id/id_fa4"
        android:hint="329.630"
        android:tag="e4"
        android:text="@string/Mi" />

    <Button
        android:id="@+id/id_freg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:hint="                 "
        android:text="wav" />

</RelativeLayout>